# 7d2d-mod-manager

./: LICENSE  METADATA.md  METADATA_SETUP_SUMMARY.md  README.md  __version__.py  app.spec  file_version_info.txt  main.py  pyproject.toml
src/gui/: app.py
